<resources>
    <string name="app_name">ToDoList</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_task_title">Edit Task</string>
    <string name="add_task_title">Add Task</string>
    <string name="error_empty_title">Please insert a title.</string>
    <string name="error_empty_description_task">Please insert a description.</string>
    <string name="camera_permission_requried_error">Camera Permission is Requried to use Camera</string>
    <string name="storage_permission_requried_error">Storage Permission is Requried to add photos</string>
    <string name="edit_note_titile">Edit Note</string>
    <string name="add_note_title">Add note</string>
    <string name="note_save_info">Note save</string>
    <string name="note_save_error">Note not save</string>
    <string name="note_update_info">Note updated</string>
    <string name="note_update_error_info">Note not updated</string>
    <string name="task_delete_info">Task delete</string>
    <string name="task_done_info">Task Done</string>
    <string name="task_undone_info">Task Undone</string>
    <string name="task_save_info">Task saved</string>
    <string name="task_save_error_info">Task not saved</string>
    <string name="task_update_info">Task update</string>
    <string name="task_update_error_info">Task not saved</string>
    <string name="delete_task_title">Delete task</string>
    <string name="delete_task_message">Are you sure you want to delete the selected task?</string>
    <string name="delete_note_title">Delete note</string>
    <string name="delete_note_message">Are you sure you want to delete the selected note?</string>
    <string name="note_delete_info">Note delete</string>
    <string name="select_date_button">Select Date</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="take_photo">Take photo</string>
    <string name="add_photo_from_gallery">Add photo from gallery</string>
    <string name="log_in_to_your_google_account">Log in to your google account</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="save">Save</string>
    <string name="refresh">Refresh</string>
    <string name="today_task">Today Task</string>
    <string name="future_task">Future Task</string>
    <string name="archive_task">Archive Task</string>
    <string name="notes">Notes</string>
    <string name="account">Account</string>
    <string name="google_account">Google Account</string>
    <string name="google_task">Google Task</string>
</resources>